Add Mouse, Keyboard  and Content Managers

--- a/Exemple/Exemple.csproj
+++ b/Exemple/Exemple.csproj
@@ -57,31 +57,31 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
-    <Content Include="Content\Textures\bottomCenter.png">
+    <Content Include="Content\Textures\0\bottomCenter.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Textures\bottomLeft.png">
+    <Content Include="Content\Textures\0\bottomLeft.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Textures\bottomRight.png">
+    <Content Include="Content\Textures\0\bottomRight.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Textures\centerCenter.png">
+    <Content Include="Content\Textures\0\centerCenter.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Textures\centerLeft.png">
+    <Content Include="Content\Textures\0\centerLeft.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Textures\centerRight.png">
+    <Content Include="Content\Textures\0\centerRight.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Textures\topCenter.png">
+    <Content Include="Content\Textures\0\topCenter.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Textures\topLeft.png">
+    <Content Include="Content\Textures\0\topLeft.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Textures\topRight.png">
+    <Content Include="Content\Textures\0\topRight.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="OpenTK.dll.config">
@@ -96,6 +96,9 @@
       <Project>{7a776114-65c0-4443-82a6-0a16425a8398}</Project>
       <Name>MyMonoGame</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Content\Sounds\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
