--- a/MyMonoGameAddin/MyMonoGameAddin.csproj
+++ b/MyMonoGameAddin/MyMonoGameAddin.csproj
@@ -28,10 +28,21 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="MonoGame.Framework">
+      <HintPath>..\..\..\..\..\..\..\usr\lib\mono\xbuild\MonoGame\v3.0\Assemblies\DesktopGL\MonoGame.Framework.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MyClass.cs" />
+    <Compile Include="ResourcesManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vector.cs" />
+    <Compile Include="InputsManager.cs" />
+    <Compile Include="BoxTexture.cs" />
+    <Compile Include="UIManager.cs" />
+    <Compile Include="KeyChar.cs" />
+    <Compile Include="Colors.cs" />
+    <Compile Include="Skin.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
